Make new test and fix the old ones